Fix whitespace above page heading

--- a/rooibos/ui/templates/master.css
+++ b/rooibos/ui/templates/master.css
@@ -101,6 +101,7 @@ a:active {
 }
 
 h1 {
+    padding-top: 15px;
     font-size: 2em;
 }
 
